# aocl-dlp

./: .buildinfo  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICES  README.md  genindex.html  index.html  objects.inv  requirements.html  search.html  searchindex.js
bench/classic/: CMakeLists.txt  bench_batch_input.txt  bench_batch_lpgemm.c  bench_data_gen_lpgemm.py  bench_lpgemm_helpers.h
classic/: CMakeLists.txt  aocl_batch_gemm_bf16bf16f32of32.c  aocl_batch_gemm_bf16s4f32of32.c  aocl_batch_gemm_bf16s8s32os32.c  aocl_batch_gemm_bf16u4f32of32.c  aocl_batch_gemm_f16f16f16of16.c  aocl_batch_gemm_f32f16f32of32.c  aocl_batch_gemm_f32f32f32of32.c  aocl_batch_gemm_f32s8s32os32.c  aocl_batch_gemm_s8s8s32_sym_quant.c  aocl_batch_gemm_s8s8s32os32.c  aocl_batch_gemm_u8s8s32os32.c  aocl_eltwise_ops.c  aocl_gemm_bf16_utils.c  aocl_gemm_bf16bf16f32obf16.c  aocl_gemm_bf16bf16f32of32.c  aocl_gemm_bf16s4f32of32.c  aocl_gemm_bf16s8s32.c  aocl_gemm_bf16s8s32obf16.c  aocl_gemm_bf16u4f32of32.c  aocl_gemm_f16f16f16of16.c  aocl_gemm_f16f16f16of32.c  aocl_gemm_f32f16f32of32.c  aocl_gemm_f32f16f32of32_utils.c  aocl_gemm_f32f32f32of32.c  aocl_gemm_f32f32f32of32_utils.c  aocl_gemm_f32s8s32.c  aocl_gemm_fp16_utils.c  aocl_gemm_s8s8s32obf16.c  aocl_gemm_s8s8s32obf16_sym_quant.c  aocl_gemm_s8s8s32of16.c  aocl_gemm_s8s8s32of32.c  aocl_gemm_s8s8s32of32_sym_quant.c  aocl_gemm_s8s8s32os32.c  aocl_gemm_s8s8s32os32_utils.c  aocl_gemm_s8s8s32os8.c  aocl_gemm_s8s8s32ou8.c  aocl_gemm_u8s4s32os32_utils.c  aocl_gemm_u8s8s32obf16.c  aocl_gemm_u8s8s32of16.c  (+6 more)
classic/JIT/: CMakeLists.txt  dlp_gemm_jit_bf16.cc  dlp_gemm_jit_bf16.h  dlp_gemm_jit_c_connector.cc  dlp_gemm_jit_c_connector.h  dlp_gemm_jit_typedefs.h  lpgemm_jit_bf16.cc  lpgemm_jit_bf16.cpp  lpgemm_jit_bf16.h  lpgemm_jit_c_connector.cc
classic/config/: dlp_gemm_blksz_map.h  dlp_gemm_config.c  dlp_gemm_func_map.h  lpgemm_blksz_map.h  lpgemm_config.c  lpgemm_func_map.h
classic/frame/: CMakeLists.txt  dlp_gemm_post_ops.c  lpgemm_post_ops.c
classic/frame/bf16bf16f32/: dlp_gemm_bf16.c  dlp_gemm_bf16_eltwise_ops.c  dlp_gemm_bf16_tiny.c  dlp_gemm_bf16s4.c  dlp_gemm_bf16u4.c  dlp_gemm_reorder_bf16.c  dlp_gemm_reorder_bf16_ref.c  dlp_gemm_unreorder_bf16_ref.c  lpgemm_bf16.c  lpgemm_bf16_eltwise_ops.c  lpgemm_bf16_tiny.c  lpgemm_bf16s4.c  lpgemm_bf16u4.c  lpgemm_reorder_bf16.c  lpgemm_reorder_bf16_ref.c  lpgemm_unreorder_bf16_ref.c
classic/frame/f32f16f32/: dlp_gemm_f32f16_tiny.c  dlp_gemm_f32f16f32.c  dlp_gemm_reorder_f32f16.c
classic/frame/f32f32f32/: dlp_gemm_f32_eltwise_ops.c  dlp_gemm_f32f32f32.c  dlp_gemm_f32f32f32_tiny.c  dlp_gemm_reorder_f32_ref.c  dlp_gemm_unreorder_f32_ref.c  lpgemm_f32_eltwise_ops.c  lpgemm_f32f32f32.c  lpgemm_f32f32f32_tiny.c  lpgemm_reorder_f32_ref.c  lpgemm_unreorder_f32_ref.c
classic/frame/fp16fp16fp16/: dlp_gemm_fp16.c  dlp_gemm_pack_fp16.c  dlp_gemm_packa_fp16_ref.c  dlp_gemm_reorder_fp16.c  dlp_gemm_reorder_fp16_ref.c  lpgemm_fp16.c  lpgemm_pack_fp16.c  lpgemm_packa_fp16_ref.c  lpgemm_reorder_fp16.c  lpgemm_reorder_fp16_ref.c
classic/frame/logging/: dlp_gemm_logger.c  lpgemm_logger.c
classic/frame/runtime/: dlp_runtime.c
classic/frame/s8s8s32/: dlp_gemm_bf16s8.c  dlp_gemm_f32s8.c  dlp_gemm_reorder_s8.c  dlp_gemm_s8s8s32.c  dlp_gemm_s8s8s32_sym_quant.c  dlp_gemm_unreorder_s8_ref.c  lpgemm_bf16s8.c  lpgemm_f32s8.c  lpgemm_reorder_s8.c  lpgemm_s8s8s32.c  lpgemm_s8s8s32_sym_quant.c  lpgemm_unreorder_s8_ref.c
classic/frame/sys_utils/: dlp_gemm_sys.c  lpgemm_sys.c
classic/frame/threading/: dlp_gemm_thread_decor_openmp.c  dlp_gemm_thread_utils.c  lpgemm_thread_decor_openmp.c  lpgemm_thread_utils.c
classic/frame/u8s8s32/: dlp_gemm_reorder.c  dlp_gemm_s4_reorder.c  dlp_gemm_u8s8s32.c  lpgemm_reorder.c  lpgemm_s4_reorder.c  lpgemm_u8s8s32.c
classic/include/: aocl_dlp_gemm_check.h  aocl_gemm_check.h  dlp_gemm_5loop_interface_apis.h  dlp_gemm_eltwise_ops_interface_apis.h  dlp_gemm_ops_bundle.h  dlp_gemm_post_ops.h  dlp_gemm_types.h  lpgemm_5loop_interface_apis.h  lpgemm_ops_bundle.h  lpgemm_post_ops.h  lpgemm_types.h
classic/include/bf16bf16f32/: dlp_gemm_reorder_bf16.h
classic/include/config/: dlp_gemm_config.h  lpgemm_config.h
classic/include/f32f16f32/: dlp_gemm_reorder_f32f16.h
classic/include/f32f32f32/: dlp_gemm_reorder_f32.h  lpgemm_reorder_f32.h
classic/include/fp16fp16fp16/: dlp_gemm_reorder_fp16.h  lpgemm_reorder_fp16.h
classic/include/gemm_utils/: dlp_gemm_utils.h
classic/include/kernels/: dlp_gemm_eltwise_ops_kernels.h  dlp_gemm_kernels.h  dlp_gemm_utils_kernels.h  dlp_kernels.h  lpgemm_kernels.h
classic/include/logging/: dlp_gemm_logger.h  lpgemm_logger.h
classic/include/runtime/: dlp_runtime.h
classic/include/s8s8s32/: dlp_gemm_reorder_s8.h
classic/include/sys_utils/: dlp_gemm_sys.h  lpgemm_sys.h
classic/include/threading/: dlp_gemm_thread_decor_openmp.h  dlp_gemm_thread_utils.h  lpgemm_thread_decor_openmp.h  lpgemm_thread_utils.h
classic/include/u8s8s32/: dlp_gemm_reorder.h
classic/kernels/zen/: dlp_gemm_util_l1_ops_avx2.c  gelu_avx2.h  lpgemm_util_l1_ops_avx2.c  math_utils_avx2.h  sigmoid_avx2.h  silu_avx2.h
classic/kernels/zen4/: CMakeLists.txt  dlp_gemm_util_l1_ops_avx512.c  gelu_avx512.h  int4_utils_avx512.h  lpgemm_util_l1_ops_avx512.c  math_utils_avx512.h  sigmoid_avx512.h  silu_avx512.h
src/: CMakeLists.txt
src/frame/arch_utils/: arch_config_manager.cc
src/frame/cpu_utils/: cpu_features.cc  x86_cpu_features.cc  x86_cpu_features.hh
src/jit/: CMakeLists.txt
tests/: CMakeLists.txt  test_framework.cc
tests/bench/: CMakeLists.txt  README.md  test_bench_utilities.cc
tests/classic/: CMakeLists.txt  test_batch_gemm.cc  test_comprehensive_postops.cc  test_framework.cc  test_gemm.cc  test_postops_multiple_params.cc  test_postops_validation.cc  test_postops_yaml.cc  test_quantised_reorder.cc  test_runtime_threading.cc  test_yaml_gemm.cc
tests/framework/: matrix.cc  omp_test_config.cc  operation.cc  ual.cc  ual_factory.cc
tests/include/: test_config.hh.in
tests/utils/: conversion_utils.cc  matrix_conversion_utils.cc
(+601 files in other folders)
